# ta-lib-easy-2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
.github/workflows/: wheels.yml
src/pkg1/: one.pxd  one.pyx
src/ta_lib/: _common.pxi  _func.pxi  abstract.py  stream.py
src/ta_lib_easy/: __init__.py  _abstract.pxi  _stream.pxi  _ta_lib.pxd  abstract.py  common.pxd  one.pyx  stream.py
src/talib/: _ta_lib.pyx  one.pyx
ta-lib/: CMakeLists.txt
