[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "cython",
    "scikit-build-core",
    "cython-cmake",
    "numpy"
]

[project]
name = "ta_lib_easy"
version = "1.0.0"
requires-python = ">=3.8"

[tool.scikit-build]
ninja.make-fallback = false
cmake.args = [
#    "-DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake",
#    "-DVCPKG_INSTALLED_DIR=./vcpkg_installed"
]
build.verbose = true
logging.level = "DEBUG"

[tool.cibuildwheel]
build = "cp*"
skip = ["cp*-musllinux*", "pp*"]
archs = ["x86_64", "AMD64", "arm64"]

[tool.cibuildwheel.linux]
before-all = '''
'''
archs = ['x86_64']

[tool.cibuildwheel.windows]
archs = ['AMD64']


