[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "cython",
    "scikit-build-core",
    "cython-cmake",
    "numpy"
]

[project]
name = "ta_lib_easy"
version = "1.0.3"
requires-python = ">=3.8"
packages=["talib"]
package_dir = {"" = "src"}

[tool.scikit-build]
ninja.make-fallback = false
build.verbose = true
logging.level = "DEBUG"

[tool.cibuildwheel]
build = "cp*"
skip = ["cp*-musllinux*"]
